# scrapy-enel

./: .env.example  .gitignore  pyproject.toml
scrapy_enel/: app.py
tests/: test_scrapy_enel.py
