[tool.poetry]
name = "scrapy_enel"
version = "0.1.0"
description = ""
authors = ["Odilon Garcez <odilon.garcez.moraes@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Scrapy = "^2.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.24.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
